--- a/trainingDiaryFrontend/trainingDiaryFrontend/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/trainingDiaryFrontend/trainingDiaryFrontend/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -3,7 +3,7 @@
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">trainingDiaryFrontend</a>
+      <a class="navbar-brand" [routerLink]="['/']">Training Diary</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -20,22 +20,20 @@
         [ngClass]="{ show: isExpanded }"
       >
         <ul class="navbar-nav flex-grow">
-          <li
-            class="nav-item"
-            [routerLinkActive]="['link-active']"
-            [routerLinkActiveOptions]="{ exact: true }"
-          >
+          <li class="nav-item"
+              [routerLinkActive]="['link-active']"
+              [routerLinkActiveOptions]="{ exact: true }">
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/counter']"
-              >Counter</a
-            >
+            <a class="nav-link text-dark" [routerLink]="['/counter']">Counter</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
-              >Fetch data</a
-            >
+            <a class="nav-link text-dark" [routerLink]="['/profile']">Profile</a>
+          </li>
+          <li class="nav-item">
+            <button class="nav-link text-dark" (click)="auth.login()" *ngIf="!auth.loggedIn">Log In</button>
+            <button class="nav-link text-dark" (click)="auth.logout()" *ngIf="auth.loggedIn">Log Out</button>
           </li>
         </ul>
       </div>
