--- a/trainingDiaryFrontend/trainingDiaryFrontend/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/trainingDiaryFrontend/trainingDiaryFrontend/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -26,6 +26,12 @@
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/training']">Training</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/meal']">Meals</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/profile']">Profile</a>
           </li>
           <li class="nav-item">
